--- a/css/main.css
+++ b/css/main.css
@@ -76,6 +76,8 @@ body {
   width: 100%;
 
   text-align: center;
+  
+  transition: background-color 250ms linear;
 }
 
 .chart__bar-wrap {
@@ -92,6 +94,8 @@ body {
   top: 0;
 
   background-color: rgba(127, 219, 255, 0.6);
+  transition: background-color 250ms linear;
+  
 }
 
 .chart__count {
