--- a/css/main.css
+++ b/css/main.css
@@ -98,6 +98,12 @@ body {
   
 }
 
+.chart__bar:hover,
+.chart__bar:focus,
+.chart__bar:active {
+	background-color: rgba(127, 219, 255, 1.00);
+}
+
 .chart__count {
   display: inline-block;
   left: -2.3em;
