--- a/css/main.css
+++ b/css/main.css
@@ -107,6 +107,8 @@ body {
 
   background-color: rgba(127, 219, 255, 0.6);
   transition: background-color 200ms linear;
+  -webkit-animation: slide-up 1000ms linear;
+  animation: slide-up 1000ms linear;
   
 }
 
@@ -155,4 +157,24 @@ body {
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
   border-top: 10px solid #000;
+}
+
+@-webkit-keyframes slide-up {
+	0% {
+		top: 10em;
+	}
+	
+	100% {
+		top: 0;
+	}
+}
+
+@keyframes slide-up {
+	0% {
+		top: 10em;
+	}
+	
+	100% {
+		top: 0;
+	}
 }
